# INTERVIEW_GENIE

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
app/: __init__.py  forms.py  models.py
app/routes/: account.py  auth.py  history.py  main.py  share.py
app/services/: ai_service.py  pdf_service.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: account.html  base.html  dashboard.html  history.html  landing.html  login.html  pdf_template.html  signup.html  view_shared.html
app/utils/: helpers.py
